# Flowmotion

./: .gitignore  4d_download.py  data_download.ipynb  extract_gt.py  pyproject.toml  regroup_breathing_cycles.py  sparse_interpolation_evaluation_results.json
analysis_results/: patient_summary.csv  series_details.csv
configs/: .config_h100_2d.yaml.swp  config_a100.yaml  config_h100_2d.yaml  config_inference.yaml  config_v100.yaml  config_v100_2d_vae.yaml
evaluation_results/: slice_wise_summary.csv  sparse_interpolation_detailed_results.csv  sparse_interpolation_summary.json
notebooks/: 01_4D-data_exploration.ipynb  02_processed_data_exploration.ipynb  04_processed_data_manual_cleaner.ipynb  05_4D-Lung_data_exploration.ipynb  06_Processed Lung Data Exploration.ipynb  07_CycleAnalysis.ipynb  08_result_visualization.ipynb
scripts/: check_hfr_status.py  check_status.py  create_splits.py  generate_interpolation_videos.py  inference_demo.ipynb  inference_flf2v.py  init_pipeline.py  prepare_data.sh  process_batch.py  run_all_interpolation.sh  run_inference.sh  run_training_8xa100.sh  run_training_a100.sh  run_training_h100.sh  run_training_multi_v100.sh  run_training_v100.sh  test_interpolation.sh  train_flf2v.py  visualize_interpolation.py
splits/: data_analysis_report.json  metadata.csv  patient_splits.json
src/: preprocess.py
src/data_pipeline/: __init__.py  data_processor.py  experiment_configs.py  manifest_manager.py  pipeline_manager.py  utils.py
src/eval/: baseline_evaluation.py  model_evaluation.py
src/flf2v/: __init__.py  config.py  datasets.py  flow_matching.py  lungct_dit.py  lungct_flf2v_model.py  lungct_vae.py  (+3 more)
(+4 files in other folders)
