[tool.poetry]
name = "flowmotion"
version = "0.1.0"
description = ""
authors = ["Izuki Matsuba"]
readme = "README.md"
packages = [{ include = "flf2v", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
torch = ">=2.7.0,<3.0.0"
torchvision = ">=0.22.0,<0.23.0"
pydicom = ">=3.0.1,<4.0.0"
opencv-python = ">=4.11.0.86,<5.0.0.0"
notebook = ">=7.4.2,<8.0.0"
ipykernel = ">=6.29.5,<7.0.0"
tciaclient = ">=0.0.3,<0.0.4"
pandas = ">=2.2.3,<3.0.0"
simpleitk = ">=2.5.0,<3.0.0"
wandb = ">=0.14.0,<0.22.0"
medvae = ">=0.1.4,<0.2.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.3"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
